network-policy/default-deny-np-ingress-egress/default-np-ingress-egress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: demo1
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
