network-policy/default-deny-np-ingress-egress/networkpolicy1.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np1
spec:
  podSelector:
    matchLabels:
      app: webapp
  policyTypes:
  - Ingress
  - Egress 
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: apple
      ports:
        - protocol: TCP
          port: 80
  egress:
  - {}
